--- a/frontend/auth.html
+++ b/frontend/auth.html
@@ -140,6 +140,7 @@
             sessionStorage.setItem("fname", data.first_name); // Assuming the backend sends the user's name
             sessionStorage.setItem("lname", data.last_name); // Assuming the backend sends the user's name
             sessionStorage.setItem("id", data.id); // Assuming the backend sends the user's name
+            sessionStorage.setItem("role",data.role);
 
             window.location.href = "homepage.html"; // Redirect to homepage
           } else {
