--- a/frontend/community.html
+++ b/frontend/community.html
@@ -27,7 +27,7 @@
           <a href="#"><i class="fas fa-utensils"></i> Canteen</a>
         </li>
         <li>
-          <a href="#"><i class="fas fa-user-md"></i> Counseling</a>
+          <a href="counselling.html"><i class="fas fa-user-md"></i> Counseling</a>
         </li>
         <li>
           <a href="community.html" class="active"><i class="fas fa-users"></i> Community</a>
